# bot-nutricionista

./: pyproject.toml  readme.md
src/: app.py  settings.py
src/agents/: agent.py  llm.py
src/database/: engine.py
src/models/: diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
