[tool.poetry]
name = "nutribot"
version = "0.1.0"
description = ""
authors = ["vitumattos <vitormattos2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pydantic = "^2.11.2"
python-dotenv = "^1.1.0"
pyrogram = "^2.0.106"
taskipy = "^1.14.1"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-google-genai = "^2.1.2"
langchain-core = "^0.3.51"
langsmith = "^0.3.24"

[tool.taskipy.tasks]
run = 'python src/app.py'
llm = 'python -m src.agents.llm'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
